--- a/templates/cart.html
+++ b/templates/cart.html
@@ -84,6 +84,11 @@
             margin-left: 15px;
         }
 
+        img {
+            width: 20px;
+            height: 20px;
+        }
+
       
     </style>
 </head>
