--- a/templates/cart.html
+++ b/templates/cart.html
@@ -87,7 +87,8 @@
         img {
             width: 30px;
             height: 30px;
-            padding: none;
+            padding: 0px 0px;
+            margin: 0px 0px;
         }
 
       
