--- a/templates/cart.html
+++ b/templates/cart.html
@@ -89,6 +89,7 @@
             height: 30px;
             padding: 0px 0px;
             margin: 0px 0px;
+            float: left;
         }
 
       
