--- a/templates/cart.html
+++ b/templates/cart.html
@@ -88,7 +88,7 @@
             width: 30px;
             height: 30px;
             padding: 0px 0px;
-            margin: 0px 0px;
+            margin-right: 10px;
             float: left;
         }
 
