--- a/templates/cart.html
+++ b/templates/cart.html
@@ -85,10 +85,10 @@
         }
 
         img {
-            width: 30px;
-            height: 30px;
-            padding: 0px 0px;
-            margin-right: 10px;
+            width: 50px;
+            height: 50px;
+            margin-top: -5px;
+            margin-right: 20px;
             float: left;
         }
 
