--- a/templates/orders.html
+++ b/templates/orders.html
@@ -51,6 +51,14 @@
         #orders_body {
             padding-bottom: 30px;
         }
+
+        img {
+            width: 47px;
+            height: 47px;
+            margin-top: -12px;
+            margin-right: 25px;
+            float: left;
+        }
     </style>
 </head>
 <body>
