--- a/templates/cart.html
+++ b/templates/cart.html
@@ -92,6 +92,15 @@
             float: left;
         }
 
+        #pickall {
+            float: right;
+            width: 30px;
+            height: 30px;
+            margin-top: 0px;
+            margin-right: 0px;
+            margin-left: 0px;
+        }
+
       
     </style>
 </head>
@@ -103,7 +112,7 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        &nbsp;&nbsp;&nbsp;&nbsp;Pick All<input id="checkbox" @click=pick(item.order_id) type="checkbox"></h2>
+        &nbsp;&nbsp;&nbsp;&nbsp;Pick All<input id="pickall" @click=pickall type="checkbox"></h2>
     <div v-for='item in order_list'>
     <ul > 
         <li>Item: {item.name},&nbsp;&nbsp;</li> 
