--- a/templates/cart.html
+++ b/templates/cart.html
@@ -94,8 +94,8 @@
 
         #pickall {
             float: right;
-            width: 30px;
-            height: 30px;
+            width: 40px;
+            height: 40px;
             margin-top: 0px;
             margin-right: 0px;
             margin-left: 0px;
@@ -112,7 +112,7 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        &nbsp;&nbsp;&nbsp;&nbsp;Pick All<input id="pickall" type="checkbox"></h2>
+        &nbsp;&nbsp;&nbsp;&nbsp;Pick All&nbsp;&nbsp;<input id="pickall" type="checkbox"></h2>
     <div v-for='item in order_list'>
     <ul > 
         <li>Item: {item.name},&nbsp;&nbsp;</li> 
