--- a/templates/cart.html
+++ b/templates/cart.html
@@ -112,7 +112,7 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        &nbsp;&nbsp;Pick All&nbsp;&nbsp;<input id="pickall" type="checkbox"></h2>
+        Pick All&nbsp;&nbsp;<input id="pickall" type="checkbox"></h2>
     <div v-for='item in order_list'>
     <ul > 
         <li>Item: {item.name},&nbsp;&nbsp;</li> 
