--- a/templates/cart.html
+++ b/templates/cart.html
@@ -99,6 +99,7 @@
             margin-top: 0px;
             margin-right: 21px;
             margin-left: 0px;
+            margin-bottom: 5px;
         }
 
       
