--- a/templates/cart.html
+++ b/templates/cart.html
@@ -99,7 +99,7 @@
             margin-top: 0px;
             margin-right: 21px;
             margin-left: 0px;
-            margin-bottom: 1px;
+            padding-bottom: 3px;
         }
 
       
