--- a/templates/static/style.css
+++ b/templates/static/style.css
@@ -1,13 +1,21 @@
+
 * {
     margin: 0;
     padding: 0;
+    font-family: "Times New Roman", Times, serif;
 }
+button {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 
 button:hover {
     background-color: white;
     color: black;
     cursor: pointer;
 }
+
+
 
 #side_bar {
     float: left;
