--- a/templates/static/style.css
+++ b/templates/static/style.css
@@ -7,7 +7,9 @@
 button {
     font-family: Arial, Helvetica, sans-serif;
 }
-
+input {
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 button:hover {
     background-color: white;
