--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -106,7 +106,8 @@
 
         img {
             width: 240px;
-            height: 250px
+            height: 250px;
+            border: 1px solid black;
         }
 
         li {
