--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -107,7 +107,7 @@
         img {
             width: 240px;
             height: 250px;
-            border: 1px solid #eee;
+            border: 1px solid #ccc;
         }
 
         li {
