--- a/templates/orders.html
+++ b/templates/orders.html
@@ -58,6 +58,7 @@
             margin-top: -12px;
             margin-right: 25px;
             float: left;
+            border: 1px solid #ccc;
         }
     </style>
 </head>
