--- a/templates/cart.html
+++ b/templates/cart.html
@@ -169,8 +169,8 @@
                 pickall: function() {
                     if (this.pickedall == false) {
                         this.pick_list = []
-                        for (i = 0; i < order_list.length; ++i)
-                            this.pick_list.push(order_list[i]["order_id"])
+                        for (i = 0; i < this.order_list.length; ++i)
+                            this.pick_list.push(this.order_list[i]["order_id"])
                         checkboxes = document.getElementsByClassName("checkbox")
                         for (i = 0; i < checkboxes.length; ++i)
                             checkboxes[i].checked = true
