--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -177,6 +177,7 @@
                                 that.comments.push(response.data[i].fields)
                             }
                             that.num_of_comments = comments.length
+                            console.log(that.num_of_comments)
                         }
                     }).catch(function(err) {
                         alert('Error');
