--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -173,7 +173,7 @@
                             alert("Error: please choose a product first.")
                             location.href = "catalog.html"
                         } else { 
-                            console.log("here")
+                            that.comments = []
                             for (i = 0; i < response.data.length; ++i) {
                                 that.comments.push(response.data[i].fields)
                             }
