--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -177,7 +177,9 @@
                             for (i = 0; i < response.data.length; ++i) {
                                 that.comments.push(response.data[i].fields)
                             }
+                            console.log("here")
                             that.num_of_comments = comments.length
+                            console.log("here")
                             console.log(that.num_of_comments)
                         }
                     }).catch(function(err) {
