--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -118,9 +118,9 @@
                 <button id="sub" @click="confirm">Checkout Right Now</button>
             </div>
             
-            <h3>Comments ( {num_of_comments})</h3>
+            <h3>Comments ( {comments.length} )</h3>
             <ul v-for = 'comment in comments'>
-                <li>{comment.username}: &nbsp; {comment.comment}</li>
+                <li>{comments.username}: &nbsp; {comments.comment}</li>
                 
             </ul>
           
@@ -132,6 +132,7 @@
     <script>
         var app = new Vue({
             el:"#app",
+            delimiters: ['{', '}'],
             data:{
                 product_id: '',
                 name: '',
