--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -97,6 +97,10 @@
             padding-bottom: 5px;
             border-bottom: 1px solid gray;
         }
+
+        #post {
+            float: right;
+        }
         
     </style>
 </head>
