--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -99,8 +99,9 @@
         }
 
         #post {
+            margin-top: -50px;
             float: right;
-            font-size: 16px;
+            font-size: 18px;
         }
         
     </style>
