--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -101,7 +101,8 @@
         #post {
             margin-top: -50px;
             float: right;
-            font-size: 18px;
+            font-size: 20px;
+            width: 30px;
         }
         
     </style>
