--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -102,7 +102,7 @@
             margin-top: -50px;
             float: right;
             font-size: 20px;
-            width: 50px;
+            height: 30px;
         }
         
     </style>
