--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -99,10 +99,11 @@
         }
 
         #post {
-            margin-top: -55px;
+            margin-top: -50px;
             float: right;
             font-size: 20px;
-            height: 30px;
+            height: 35px;
+            margin-right: 50px;
         }
         
     </style>
