--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -96,6 +96,7 @@
             margin-left: 80px;
             padding-bottom: 5px;
             border-bottom: 1px solid gray;
+            font-size: 22px;
         }
 
         #post {
@@ -103,7 +104,7 @@
             float: right;
             font-size: 20px;
             height: 40px;
-            margin-right: 100px;
+            margin-right: 80px;
         }
         
     </style>
@@ -125,7 +126,7 @@
                 <button id = "a" @click="addToCart">Add To Cart</button>
                 <button id="sub" @click="confirm">Checkout Right Now</button>
             </div>
-            <br><br>
+            <br><br><br><br>
             <h3>Comments ({comments.length})</h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
