--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -106,6 +106,11 @@
             height: 40px;
             margin-right: 73px;
         }
+
+        #li {
+            list-style: none;
+            margin-left: 400px;
+        }
         
     </style>
 </head>
@@ -132,7 +137,7 @@
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;<button id="post" @click = "post">Post a Comment</button>
             <ul v-for = 'comment in comments'>
-                <li>{comments.username}: &nbsp; {comments.comment}</li>
+                <li><b>{comments.username}</b>: &nbsp; {comments.comment}</li>
                 
             </ul>
           
