--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -110,6 +110,8 @@
         #li {
             list-style: none;
             margin-left: 400px;
+            font-size: 18px;
+            padding-bottom: 10px;
         }
         
     </style>
