--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -108,6 +108,7 @@
         }
 
         #li {
+            float: left;
             list-style: none;
             margin-left: 500px;
             font-size: 20px;
