--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -110,9 +110,10 @@
         li {
             float: left;
             list-style: none;
-            margin-left: 500px;
-            font-size: 20px;
-            padding-bottom: 10px;
+            margin-left: 100px;
+            font-size: 22px;
+            padding-bottom: 20px;
+            border-bottom: 1px solid #eee;
         }
         
     </style>
