--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -141,7 +141,7 @@
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;<button id="post" @click = "post">Post a Comment</button>
             <ul v-for = 'comment in comments'>
-                <li><b>{comment.username}</b>: &nbsp; {comment.comment}</li>
+                <li><b>{comment.username}</b>: &nbsp; {comment.comment}</li><br>
                 
             </ul>
           
