--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -114,6 +114,7 @@
             font-size: 22px;
             padding-bottom: 20px;
             border-bottom: 1px solid #eee;
+            padding-top: 20px;
         }
         
     </style>
