--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -107,8 +107,9 @@
             margin-right: 73px;
         }
 
-        ul {
-            float: left;
+        ul>li {
+            display: inline-block;
+         
             list-style: none;
             margin-left: 85px;
             font-size: 22px;
