--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -114,8 +114,12 @@
             margin-left: 85px;
             font-size: 22px;
             padding-bottom: 20px;
-            border-bottom: 1px solid #eee;
+            
             padding-top: 20px;
+        }
+
+        h4 {
+            border-bottom: 1px solid #eee;
         }
         
     </style>
@@ -143,7 +147,8 @@
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;<button id="post" @click = "post">Post a Comment</button>
             <ul v-for = 'comment in comments'>
-                <li><b>{comment.username}</b>: &nbsp; {comment.comment}</li><br>
+                <li><b>{comment.username}</b>: &nbsp; {comment.comment}</li>
+                <h4></h4>
                 
             </ul>
           
