--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -121,6 +121,7 @@
         h4 {
             border-bottom: 1px solid #eee;
             width: 80%;
+            margin-left: 300px;
         }
         
     </style>
