--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -114,12 +114,11 @@
             margin-left: 85px;
             font-size: 22px;
             padding-bottom: 20px;
-            
-            padding-top: 20px;
+
         }
 
         h4 {
-            border-bottom: 1px solid #eee;
+            border-bottom: 1px solid #ddd;
             width: 87%;
             margin-left: 78px;
         }
