--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -113,7 +113,8 @@
             list-style: none;
             margin-left: 85px;
             font-size: 22px;
-            padding-top: 20px;
+            margin-top: 20px;
+            margin-bottom: 20px;
 
         }
 
