--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -94,7 +94,7 @@
             width: 87%;
             margin-top: 30px;
             margin-left: 80px;
-            
+            padding-bottom: 5px;
             border-bottom: 1px solid gray;
             font-size: 22px;
         }
@@ -107,6 +107,9 @@
             margin-right: 73px;
         }
 
+        ul {
+            padding-top: 0px;
+        }
         ul>li {
             display: inline-block;
          
