--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -109,6 +109,7 @@
 
         ul {
             padding-top: 0px;
+            margin-top: 0px;
         }
         ul>li {
             display: inline-block;
