--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -97,6 +97,7 @@
             padding-bottom: 5px;
             border-bottom: 1px solid gray;
             font-size: 22px;
+            margin-bottom: 0px;
         }
 
         #post {
