--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -127,6 +127,7 @@
             border-bottom: 1px solid #ddd;
             width: 87%;
             margin-left: 78px;
+            margin-bottom: 10px;
         }
         
     </style>
