--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -124,7 +124,7 @@
         }
 
         h4 {
-            border-bottom: 1px solid #ddd;
+            border-bottom: 1px solid #ccc;
             width: 87%;
             margin-left: 78px;
             margin-bottom: 17px;
