--- a/templates/edit_order.html
+++ b/templates/edit_order.html
@@ -240,7 +240,7 @@
                             location.href = "catalog.html"
                         } else { 
                             alert("Comment posted.")
-                            location.href = "confirm.html"
+                            location.href = "edit_order.html"
                             
                         }
                     }).catch(function(err) {
