--- a/templates/cart.html
+++ b/templates/cart.html
@@ -22,7 +22,7 @@
             font-size: 20px;
             list-style: none;
             width: 900px;
-            border: 1px solid black;
+            
             margin-left: 80px;
             border-radius: 10px;
             margin-top: 20px;
@@ -101,6 +101,11 @@
             margin-left: 0px;
             padding-bottom: 10px;
             border: 1px solid #ccc;
+        }
+
+        #items {
+            border: 1px solid black;
+            
         }
 
 
