--- a/templates/cart.html
+++ b/templates/cart.html
@@ -22,7 +22,7 @@
             font-size: 20px;
             list-style: none;
             width: 900px;
-            
+            border: 1px solid gray;
             margin-left: 80px;
             border-radius: 10px;
             margin-top: 20px;
@@ -103,10 +103,7 @@
             border: 1px solid #ccc;
         }
 
-        #items {
-            border: 1px solid black;
-            
-        }
+      
 
 
 
